Bug 87845 - CRASH: Print preview crashes LO when Navigator is enabled
Summary: CRASH: Print preview crashes LO when Navigator is enabled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.beta2
Hardware: x86-64 (AMD64) All
: highest critical
Assignee: Michael Stahl (allotropia)
URL:
Whiteboard: target:4.5.0 target:4.4.1 target:4.4.0
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks: mab4.4
  Show dependency treegraph
 
Reported: 2014-12-29 22:22 UTC by Frank Berke
Modified: 2015-12-17 08:42 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Java error log after LO crash (111.14 KB, text/plain)
2014-12-29 22:22 UTC, Frank Berke
Details
gdb log (2.42 KB, application/gzip)
2015-01-02 15:17 UTC, raal
Details
4.4rc1 crasher on OSX 10.10.1 (80.58 KB, text/plain)
2015-01-02 18:56 UTC, retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Berke 2014-12-29 22:22:38 UTC
Created attachment 111492 [details]
Java error log after LO crash

When calling 'Pring Preview' (either from menu or through the icon) LO crashes, leaving some messages about a Java issue in my terminal:

frank@maniac:/opt/libreoffice4.4/program$ ./swriter 
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  SIGSEGV (0xb) at pc=0x00007f2b0fa39ef8, pid=6150, tid=139823975573632
#
# JRE version: Java(TM) SE Runtime Environment (7.0_72-b14) (build 1.7.0_72-b14)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (24.72-b04 mixed mode linux-amd64 compressed oops)
# Problematic frame:
# C  [libswlo.so+0xa79ef8]  SwView::GetDocShell()+0x8
#
# Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /tmp/hs_err_pid6150.log
#
# If you would like to submit a bug report, please visit:
#   http://bugreport.sun.com/bugreport/crash.jsp
#

This bug even occours with an empty document. Attached you'll find the corresponding error log.
Comment 1 Robinson Tryon (qubit) 2014-12-29 23:19:24 UTC
TESTING w/Ubuntu 14.04 + LO Version: 4.5.0.0.alpha0+
Build ID: 783ba49aa0cd068c7e3dacdd3c13e9c37cf52e22
TinderBox: Linux-rpm_deb-x86_64@46-TDF, 
Branch:master, 
Time: 2014-12-18_11:21:12
Locale: en_US

(In reply to Frank Berke from comment #0)
> When calling 'Pring Preview' (either from menu or through the icon) LO
> crashes, leaving some messages about a Java issue in my terminal:

NOREPRO: Print Preview opens fine for me here with LO 4.5.0 (master) and 4.4.0.1

Tested 4.4.0.1 with Java 6 and Java 7 (1.7.0_65).

> # JRE version: Java(TM) SE Runtime Environment (7.0_72-b14) (build
> 1.7.0_72-b14)
> # Java VM: Java HotSpot(TM) 64-Bit Server VM (24.72-b04 mixed mode
> linux-amd64 compressed oops)

I'm using the java-7-openjdk package. I'd try that and see if it works well for you.

Additionally: I wouldn't expect Print Preview to rely on Java. Could you please attach the document you had open?  (Sanitize before uploading: https://wiki.documentfoundation.org/Sanitize)

Thanks!

Status -> NEEDINFO

(please change status back to UNCONFIRMED after you attach the sample file)
Comment 2 Frank Berke 2015-01-02 11:47:51 UTC
The crash did not occour with any special document - even a newly openend empty one did the trick for me.

I changed my JVM from 7 to 8, but still got the same effect.

Then I removed my ~/.config/libreoffice directory to force LO 4.4 to create a new one. With LO now on its default settings, print preview works again. I will try to migrate my templates, autotexts and wordbooks step by step to see if any of them is the culprit.
Comment 3 Frank Berke 2015-01-02 13:48:34 UTC
The Navigator is the component causing the problem. Having it open, either docked or in floating mode, it crashes LO for sure. Once you close the Navigator (by pressing F5), Print Preview works again without problems.

This never happened with any previous LO version before.
Comment 4 raal 2015-01-02 15:10:42 UTC
I can confirm with Version: 4.4.0.0.beta2+
Build ID: e1de94244c1b0419c1c3415c02381e8b7a87abe0
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:libreoffice-4-4, Time: 2014-12-14_11:45:23
Comment 5 raal 2015-01-02 15:17:56 UTC
Created attachment 111654 [details]
gdb log
Comment 6 Robinson Tryon (qubit) 2015-01-02 18:20:29 UTC
(In reply to raal from comment #4)
> I can confirm with Version: 4.4.0.0.beta2+
> Build ID: e1de94244c1b0419c1c3415c02381e8b7a87abe0
> TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:libreoffice-4-4, Time:
> 2014-12-14_11:45:23

Yep -- Same crashing behavior with 4.4.0.1 for me on Ubuntu 14.04.
Status -> NEW

High possibility of data loss, so
Blocks -> mab4.4
Priority -> highest
Comment 7 Robinson Tryon (qubit) 2015-01-02 18:24:11 UTC
CONFIRMED on Ubuntu 14.04 with
LO Version: 4.5.0.0.alpha0+
Build ID: 783ba49aa0cd068c7e3dacdd3c13e9c37cf52e22
TinderBox: Linux-rpm_deb-x86_64@46-TDF
Branch:master
Time: 2014-12-18_11:21:12
Locale: en_US
Comment 8 retired 2015-01-02 18:28:29 UTC
works fine 4.5 latest nightly from today osx 10.10.1
Comment 9 retired 2015-01-02 18:55:36 UTC
4.4.RC1 confirmed on OSX 10.10.1.

crashlog attached.

per definition this is WORKSFORME, but still MAB for 4.4
Comment 10 retired 2015-01-02 18:56:07 UTC
Created attachment 111670 [details]
4.4rc1 crasher on OSX 10.10.1
Comment 11 retired 2015-01-02 18:56:34 UTC
all platforms is correct.
Comment 12 Robinson Tryon (qubit) 2015-01-02 19:03:17 UTC
(In reply to foss from comment #8)
> works fine 4.5 latest nightly from today [2015-01-02] osx 10.10.1

I'm CONFIRMING this bug on Ubuntu 14.04 with
LO Version: 4.5.0.0.alpha0+
Build ID: 5c60dab390d66a4d5abeaf548efecf3913b90839
TinderBox: Linux-rpm_deb-x86_64@46-TDF
Branch:master
Time: 2014-12-31_00:20:30
Locale: en_US

Possible that it's been fixed in the last 2 days... or that behavior isn't consistent across platforms?
Comment 13 Robinson Tryon (qubit) 2015-01-02 19:14:40 UTC
(In reply to Robinson Tryon (qubit) from comment #12)
> (In reply to foss from comment #8)
> > works fine 4.5 latest nightly from today [2015-01-02] osx 10.10.1
> 
> I'm CONFIRMING this bug on Ubuntu 14.04 with
> LO Version: 4.5.0.0.alpha0+
> Time: 2014-12-31_00:20:30

Hmm... I can still CONFIRM the bug on OS X 10.9.5 +
LO Version: 4.5.0.0.alpha0+
Build ID: 4d3b725000e537ce6199f0abd1c80580c9bf95c8
TinderBox: MacOSX-x86_64@49-TDF
Branch:master
Time: 2015-01-02_10:08:47
Locale: en_

Status -> NEW
Comment 14 Robinson Tryon (qubit) 2015-01-02 19:29:56 UTC
Tests on Ubuntu 14.04:
- 4.3.5.2 - NOREPRO
- 4.4.0.0 beta1 - NOREPRO
- 4.4.0.0.beta2 - CONFIRMED
Comment 15 Caolán McNamara 2015-01-05 12:27:30 UTC
possible a regression from b5c1f352522c34a744ad0226e73904ce5af81b11
Comment 16 Michael Stahl (allotropia) 2015-01-10 00:26:02 UTC
sorry about that, fixed on master

btw the JVM crash report is a red herring, you always get that if LO has loaded the JVM, the line with the crash address clearly indicates it's a problem in LO's C++ code:

# Problematic frame:
# C  [libswlo.so+0xa79ef8]  SwView::GetDocShell()+0x8
Comment 17 Commit Notification 2015-01-10 00:27:48 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=90d8f4fca566e46171b260ee3aadc655871c92ba

fdo#87845: sw: fix crash in navigator dialog when view is closed

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 18 Commit Notification 2015-01-14 10:11:03 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bfc20246a88b19461d4bc95df47095186200ca77&h=libreoffice-4-4

fdo#87845: sw: fix crash in navigator dialog when view is closed

It will be available in 4.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2015-01-19 15:57:41 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b84c8f64d0388369779c3977768c4f66071296fc&h=libreoffice-4-4-0

fdo#87845: sw: fix crash in navigator dialog when view is closed

It will be available in 4.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 20 Caolán McNamara 2015-01-23 14:57:11 UTC
*** Bug 88360 has been marked as a duplicate of this bug. ***
Comment 21 Robinson Tryon (qubit) 2015-12-17 08:42:49 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]