fdo#87845: sw: fix crash in navigator dialog when view is closed

Since we have a SwContentTree::Notify() now, might as well clear our
pointers to recently deceased SwWrtShells when the obituary arrives.

(regression from b5c1f352522c34a744ad0226e73904ce5af81b11)

Change-Id: I44282658468f1b758038fbf1c7fc13dfe1b4b8ed
(cherry picked from commit 90d8f4fca566e46171b260ee3aadc655871c92ba)